admin/css/fontsampler-admin.css
/* ... */
#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block .fontsampler-ui-block-overlay {
  background: rgba(100, 200, 240, 0.9);
  box-sizing: border-box;
  cursor: move !important;
  display: none;
  height: 100%;
  left: 0;
  outline: 2px solid #64CAF0;
  opacity: 1;
  padding: 10px;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 19;
}
#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block .fontsampler-ui-block-overlay .fontsampler-ui-block-settings {
  box-sizing: border-box;
  border: none;
  background: transparent;
  cursor: pointer;
  display: block;
  height: 100%;
  outline: none;
  padding: 5px;
  position: absolute;
  right: 0;
  top: 0;
  width: 30px;
}
#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block .fontsampler-ui-block-overlay .fontsampler-ui-block-settings img {
  display: block;
  height: 20px;
  width: 20px;
}
#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block .fontsampler-ui-block-overlay .fontsampler-ui-block-options {
  border: 2px solid #008EC2;
  display: none;
  padding: 10px;
  position: absolute;
  right: -1px;
  top: 100%;
  background: rgba(255, 200, 50, 0.9);
  min-width: 15em;
  width: auto;
}
#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block .fontsampler-ui-block-overlay .fontsampler-ui-block-options .fontsampler-ui-block-add-break {
  margin-bottom: 1em;
}
#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview .fontsampler-interface .fontsampler-ui-block .fontsampler-ui-block-overlay .fontsampler-ui-block-options .fontsampler-ui-block-layout-classes label {
  display: block;
  margin: 0.5em 0;
}
#fontsampler-admin #fontsampler-admin-ui-wrapper #fontsampler-ui-layout-preview-options {
  clear: both;
  display: block;
}
#fontsampler-admin #fontsampler-admin-ui-wrapper .type-tester__slider {
  margin-top: 4px;
}
#fontsampler-admin ul.fontsampler-ui-preview-placeholder li {
  display: none;
}
#fontsampler-admin header {
  background: white;
  margin: 0 1.5em 0 0;
  padding: 1em 1em;
}
#fontsampler-admin #fontsampler-menu ul {
  border-bottom: 4px solid #008EC2;
  margin: 0;
  padding: 0 1em;
}
#fontsampler-admin #fontsampler-menu ul li {
  padding: 0;
  margin: 0;
  font-size: larger;
  display: inline-block;
  border-bottom: 0;
  background: #FFFFFF;
}
#fontsampler-admin #fontsampler-menu ul li a {
  border: 0;
  background: #F2F2F2;
  border-radius: 0;
  border-bottom: 0;
  box-shadow: none;
  color: #008EC2;
  display: inline-block;
  font-weight: bold;
  padding: 0.5em 1em;
  text-decoration: none;
  outline: none;
  transition: background 0.15s ease-in-out;
}
#fontsampler-admin #fontsampler-menu ul li a:active {
  background: #FFFFFF !important;
  color: #008EC2 !important;
}
#fontsampler-admin #fontsampler-menu ul li a:hover,
#fontsampler-admin #fontsampler-menu ul li a:focus {
  background: #64CAF0;
  border-bottom: 0;
  color: #fff;
}
#fontsampler-admin #fontsampler-menu ul li a.latest-changes {
  background: #E5604E !important;
  color: #FFFFFF !important;
}
#fontsampler-admin #fontsampler-menu ul li.current a {
  background: #008EC2;
  border-bottom: 0;
  color: #FFFFFF;
}
#fontsampler-admin footer {
  margin: 1.5em 1.5em 0 0;
  padding: 1em 2em 0.5em;
  background: white;
}
#fontsampler-admin footer ul {
  overflow: auto;
}
#fontsampler-admin footer li {
  box-sizing: border-box;
  display: inline-block;
  float: left;
  padding-right: 1em;
  width: 20%;
  max-width: 120px;
}
#fontsampler-admin footer li > a {
  display: block;
  height: 0;
  padding-top: 62.5%;
  position: relative;
  text-align: center;
  width: 100%;
}
#fontsampler-admin footer li > a img {
  display: block;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}
#fontsampler-admin footer li > img {
  display: block;
  height: 12.5%;
  width: 100%;
}
/*
 * Scope all css to be contained only within the fontsampler wrapper
 */
#fontsampler-admin {
  padding-top: 1em;
}
#fontsampler-admin main {
  background: white;
  margin: 0 1.5em 0 0;
  padding: 1em 2em;
}
#fontsampler-admin fieldset label,
#fontsampler-admin label.fontsampler-admin-label-block {
  display: block;
  color: #4A4A4A;
  margin: 0.5em 0;
}
#fontsampler-admin .submit {
  padding: 0;
  margin: 3em 0;
}
#fontsampler-admin .submit input {
  border: none;
}
#fontsampler-admin table .submit {
  margin: 1em 0;
}
#fontsampler-admin input {
  border: 1px solid #aaa;
}
#fontsampler-admin input[type=file] {
  border: 0;
}
#fontsampler-admin input[type=file]:hover,
#fontsampler-admin input[type=file]:focus {
  border: 0;
}
#fontsampler-admin input[type=text],
#fontsampler-admin textarea {
  border: 2px solid #CBCBCB;
}
#fontsampler-admin input[type=text]:hover,
#fontsampler-admin textarea:hover,
#fontsampler-admin input[type=text]:focus,
#fontsampler-admin textarea:focus {
  box-shadow: none;
  border: 2px solid #64CAF0;
}
#fontsampler-admin input[type=text].fontsampler-input-warning {
  border-color: #C0402F;
}
#fontsampler-admin fieldset {
  border: 4px solid #F2F2F2;
  padding: 1em;
}
#fontsampler-admin fieldset.no-padding {
  padding: 0;
}
#fontsampler-admin fieldset legend {
  font-weight: bold;
  padding: 0 0.5em;
}
#fontsampler-admin table,
#fontsampler-admin thead,
#fontsampler-admin tbody,
#fontsampler-admin tr,
#fontsampler-admin th,
#fontsampler-admin td {
  text-align: left;
  vertical-align: middle;
}
#fontsampler-admin table {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
  margin: -1em auto 0;
  border: 4px solid #F2F2F2;
  padding: 4px;
}
#fontsampler-admin table.fontsampler-fontset-files {
  margin: 0 auto;
}
#fontsampler-admin input.fontsampler-font-set-fontname {
  width: 20em;
}
/* ... */

